--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -6,6 +6,7 @@
   </title>
   <link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
   
+<h1>Our MEET Y2 project</h1>
   
 </head>
 
