--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -4,7 +4,7 @@
   <title>
     Title for this Page Goes Here
   </title>
-  <link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
+  <link rel=stylesheet type=text/css href="{{ url_for('static', filename='front_page_css.css') }}">
 
   
 <h1>Our MEET Y2 project</h1>
