--- a/templates/add_country.html
+++ b/templates/add_country.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <title>
+    Add Country
+  </title>
+  <link rel=stylesheet type=text/css href="{{ url_for('static', filename='add_css.css') }}">
+</head>
 <body>
 <form method='POST'>
-<p>Country Name:</p>
-<input type='text' name='country'><br>
-<input type='submit' value='Submit'>
+<h1>Country Name:</h1>
+<input class='ytext' type='text' name='country'><br><br>
+<input class='ybutton' type='submit' value='Submit'>
 </form>
 </body>
 </html>
