before lunch, finish later

--- a/templates/add_country.html
+++ b/templates/add_country.html
@@ -11,6 +11,9 @@
 <h1>Country Name:</h1>
 <input class='ytext' type='text' name='country'><br><br>
 <input class='ybutton' type='submit' value='Submit'>
+<div>
+<a href="{{url_for('disp_countries')}}">Cancel</a>
+</div>
 </form>
 </body>
 </html>
