--- a/templates/list_of_countries.html
+++ b/templates/list_of_countries.html
@@ -9,9 +9,8 @@
 <body style="text-align:center;">
 <h1> Countries: </h1>
 {% for country in countries %}
-<h2><a href="{{url_for('show_country', countryId=country.id)}}">{{country.country}}</a></h2>
+<a href="{{url_for('show_country', countryId=country.id)}}">{{country.country}}</a>
 {% endfor %}
-
 <br><br>
 <form action="{{url_for('add_country')}}">
     <input class='ybutton' type="submit" value="Add Country">
