--- a/templates/display_country.html
+++ b/templates/display_country.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <h1>Stories:</h1><br>
+<a class='ybut2' href='{{url_for('disp_countries')}}'>BACK</a>
 {% for story in stories %}
 <img src='{{story.picture}}'><br>
 {% endfor %}
