--- a/templates/add_story.html
+++ b/templates/add_story.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>
-    Add Country
+    Add Story
   </title>
   <link rel=stylesheet type=text/css href="{{ url_for('static', filename='add_css.css') }}">
 </head>
