--- a/static/front_page_css.css
+++ b/static/front_page_css.css
@@ -2,11 +2,11 @@ h1 {
 font-size: 300%;
 text-align: center;
 font-family: Times New Roman;
-color: #000000;
+color: #004A00;
 }
 
 body {
-background-image: url(http://www.pageresource.com/wallpapers/wallpaper/cool-abstract-white-background.jpg);
+background-image: url(http://wallpaperscript.webitfree.com/wp-content/uploads/2014/04/white-rocks-ipad-background.jpg);
 background-size: 100%;
 text-align: center;
 }
@@ -15,7 +15,7 @@ h2 {
 font-size: 200%;
 text-align: center;
 font-family: Times New Roman;
-color: #000000;
+color: #75A319;
 }
 img {
 width: 70%;
