--- a/static/add_css.css
+++ b/static/add_css.css
@@ -2,7 +2,7 @@ h1 {
 font-size: 500%;
 text-align: center;
 font-family: Times New Roman;
-color: #000066;
+color: #004A00;
 }
 body {
 background-image: url(http://www.hddesktopbackgrounds.us/backgrounds-images/1680x1050/b48ti-wallpapers-091421358-1680x1050.jpg);
