--- a/templates/add_story.html
+++ b/templates/add_story.html
@@ -8,13 +8,20 @@
 </head>
 <body>
 <form method='POST'>
+
 <h1>Story picture link:</h1>
 <input class='ytext' type='text' name='story'><br><br>
+
+<h1>Story text:</h1>
+<input class='ytext' type='text' name='stext'><br><br>
+
+
 <a class='ybutton' href="{{url_for('show_country', countryId=placeId)}}">Cancel</a>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
 <input class='ybutton' type='submit' value='Submit'>
-<div>
-</div>
+
 </form>
+
 </body>
 </html>
